tests/neg/i3745a.scala
import scala.collection.{ Seq, Seq } // error: Seq is renamed twice
